Propagate exceptions for fnml function implementation